launch_template.tf
# Create EC2 SG
resource "aws_security_group" "EC2" {
  name_prefix   = "apache-ec2-sg"
  description   = "Security group for ec2-apache"
  vpc_id        = aws_vpc.main.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [aws_security_group.alb-sg.id]
  }

  tags = {
    Name = "EC2-SG"
  }
}

# Create Launch Template
resource "aws_launch_template" "apache_lt" {
  name = "apache_lt"
  description = "my apache launch template"
  image_id = var.ami
  instance_type = "t2.micro"

  vpc_security_group_ids = [aws_security_group.EC2.id]
  user_data = filebase64("Scripts/install_apache.sh")

  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "apache-asg"
    }
  }
}
